SNC-5357.Designtokenimporter fails on execution

--- a/src/DesignTokensImporter/src/CMakeLists.txt
+++ b/src/DesignTokensImporter/src/CMakeLists.txt
@@ -6,6 +6,8 @@ set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/DesignAssetsRepoManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/DesignTokensImporter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/DesignGenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/PathProvider.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/CommandLineHandler.cpp
 
     PARENT_SCOPE
 )
@@ -17,6 +19,7 @@ set(DESIGN_TOKENS_IMPORTER_HEADERS ${DESIGN_TOKENS_IMPORTER_HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/DesignTokensImporter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/DesignGenerator.h
     ${CMAKE_CURRENT_SOURCE_DIR}/PathProvider.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/CommandLineHandler.h
 
     PARENT_SCOPE
 )
