--- a/src/MEGASync/CMakeLists.txt
+++ b/src/MEGASync/CMakeLists.txt
@@ -98,6 +98,7 @@ include(notifications/notifications.cmake)
 include(platform/platform.cmake)
 include(qtlockedfile/qtlockedfile.cmake)
 include(stalled_issues/stalledissues.cmake)
+include(node_selector/nodeselector.cmake)
 include(syncs/syncs.cmake)
 include(transfers/transfers.cmake)
 include(UserAttributesRequests/userattributesrequests.cmake)
